@@ -1,5 +1,3 @@
-DIST pivotal-tracker-0.3.0.gem 19968 SHA256 b407daa60dd6a51168e71abd18ac8b2dde3aeea119c1e35d38280ec8c1ba30d2 SHA512 6b0611b3358048ee1fc82420a2a1773036bb7a477365f40f4c739fbd54009318e3e97321cc7d98aa366272c3d24ecbaf03822de76e115ea3c2e43b476c9fab96 WHIRLPOOL 3878b6f00760bb196fb5090c5015721b11ad61ef716c356aac87fa8ae6d5096d7e9e63c6c079854843cc813b9525d3bc8f77bc0b33dece5cfeb8c37646dcd5e8
-DIST pivotal-tracker-0.4.1.gem 20992 SHA256 c32295b080c4d0e5c9aea696428954f85ce353bbf3bd4a74a82ef43873da32d5 SHA512 8af1b7151d2f14fca9e20d666ba2a35785cb9b762cb205bd6cb42ae49b5f07cef26c4489998a9bb300ef4559ff869c25b7b52d316c13969b927ce1c9b613a04d WHIRLPOOL 2fd5868ad46750e06f7a22773c7a1b79e76b058c90162af443e0aabfc7753ec5522573d5eba10bd9f8c8e5bd863fdb6ed4f7bee448fd1b0a6a06f92f8b158872
 DIST pivotal-tracker-0.5.10.gem 25088 SHA256 86d2daf667d16f9638ecdf4e282a2c24fa5bc35be04a2f27e5edb1bfc3756a23 SHA512 d3c63b8d44c783c673baa8648ba4c8663bf9da8acf2d3ef107b0bbab3a1eb6f93d927f5b2ae891e90f2b2b8345cf3a40f62e7b100b918422d552c3b33d8b6409 WHIRLPOOL f31c9e7aa8696c488aa827bb0c4ec34551f2eaee5f8a8982bc58a4747c57f415a5a0f0bc583daf60913a63d78b69474ef6d433995a6f4e45bbf8348edd161d2d
 DIST pivotal-tracker-0.5.12.gem 26112 SHA256 ed8819731dc544a4ead6dceeeaf159cb219b6e380dda4f7b359945f5203c340a SHA512 fab699485b2d16de897f0271a2daa994b049d47915f5920a1e564dd17e80f1f3b4b44456b1f2e13d0451755f7126aad0e082f217b3a2113e04a36afc6ae788bf WHIRLPOOL 52447dd1626d10cab9ee637b87c7605b831bc39eb1a27a270bf43aec5ba8fa5bb915dcb027cf9e9a45cee6a4bab9717b7ed55f4260f7e8ebb2aa3d1326408a28
 DIST pivotal-tracker-0.5.6.gem 25088 SHA256 a70d831e990c79e5f638f53577fd0945b8f7eb39996a1b5db9b2863f8339ebc8 SHA512 8906897747f63731103230b9b2893b91bfc926ae22e570cf83fe42375640ba5e2e8f55d905f620fca9c4c21458dd147e3114f6e359b8c53c0bdb3047b430721a WHIRLPOOL 44b33e39bcaa95f0a6f98aea3d51218a98d9fe45047dddbe3385c3d541d4e9fa92ce31d638a88945904c1aa788e86716880776be53d70211a5fed808553a9ac3
