@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/pivotal-tracker
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  23 Sep 2014; Hans de Graaff <graaff@gentoo.org>
+  -pivotal-tracker-0.3.0.ebuild, -pivotal-tracker-0.4.1.ebuild:
+  Cleanup.
 
 *pivotal-tracker-0.5.12 (13 Sep 2013)
 
